--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -1,14 +1,13 @@
 .hero {
 	color: #ffffff;
 	text-align: center;
-	height: 100vh;
+	height: 50vh;
 	min-height: 550px;
 	background-color: #333;
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: center center;
 
-	&:before {
+	/*&:before {
 		content: "";
 		background: linear-gradient(to bottom,rgba(0,0,0,.65) 0,rgba(0, 0, 0, 0) 100%);
 		position: absolute;
@@ -16,7 +15,7 @@
 		left: 0;
 		right: 0;
 		height: 300px;
-}
+	}*/
 
 	p {
 		color: #fff;
@@ -29,17 +28,31 @@
 	}
 
 	.hero-text-container {
-		width: 600px;
-		text-align: left;
+		width: 100%;
+		text-align: center;
 
 		h1, h2, p, .button {
-			text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+			text-shadow: 1px 1px 1px #000;
 		}
 	}
 
 	.hero-text-right {
 		position: absolute;
 		right: 0;
+	}
+}
+
+// Background images for homepage only.
+// Uses alternative image when using a smaller screen (mobile phones)
+@media only screen and (max-width: 600px) {
+	.hero-homepage {
+		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/title-mobile.png');
+	}
+}
+
+@media only screen and (min-width: 600px) {
+	.hero-homepage {
+		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/title.png');
 	}
 }
 
@@ -61,10 +74,26 @@
 		align-items: center;
 		flex-direction: row;
 
-		.text, .image {
+		.text, .image, .youtube-embed {
 			-webkit-flex: 1;
 			flex: 1;
 			padding: 0 20px;
+		}
+	}
+
+	.youtube-embed {
+		text-align: center;
+		position: relative;
+		padding-bottom: 56.25%; /* 16:9 */
+		height: 0;
+
+		iframe {
+			position:absolute;
+			top:0;
+			left:0;
+			height:100%;
+			width: 100%;
+			
 		}
 	}
 
