--- a/css/screen.scss
+++ b/css/screen.scss
@@ -7,6 +7,7 @@
 @import "landing-page";
 @import "layout";
 @import "staff";
+@import "partner_orgs";
 @import "contact";
 @import "forms";
 @import "navigation";
