--- a/_sass/landing-page.scss
+++ b/_sass/landing-page.scss
@@ -46,7 +46,7 @@
 // Uses alternative image when using a smaller screen (mobile phones)
 @media only screen and (max-width: 600px) {
 	.hero-homepage {
-		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/title-mobile.png');
+		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/title-homepage-mobile.png');
 	}
 
 	.award-img {
@@ -57,7 +57,7 @@
 
 @media only screen and (min-width: 600px) {
 	.hero-homepage {
-		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/title.png');
+		background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('/images/title-homepage.png');
 	}
 
 	.award-img {
